syntax = "proto3";

package nftmeta.v1.snapshot;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/snapshot";

import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse) {}
  rpc CreateSnapshots(CreateSnapshotsRequest) returns (CreateSnapshotsResponse) {}
  rpc UpdateSnapshot(UpdateSnapshotRequest) returns (UpdateSnapshotResponse) {}
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse) {}
  rpc GetSnapshotOnly(GetSnapshotOnlyRequest) returns (GetSnapshotOnlyResponse) {}
  rpc GetSnapshots(GetSnapshotsRequest) returns (GetSnapshotsResponse) {}
  rpc ExistSnapshot(ExistSnapshotRequest) returns (ExistSnapshotResponse) {}
  rpc ExistSnapshotConds(ExistSnapshotCondsRequest)
      returns (ExistSnapshotCondsResponse) {}
  rpc CountSnapshots(CountSnapshotsRequest) returns (CountSnapshotsResponse) {}
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse) {}
}

enum BackupState {
    DefaultBackupState = 0;
    BackupStateNone    = 10;
    BackupStateCreated = 20;
    BackupStateTransferring = 30;
    BackupStateSealing = 40;
    BackupStateSuccess = 50;
    BackupStateFail    = 60;
}

message Snapshot {
  string ID            = 10;
  uint64 Index         = 20;
  string SnapshotCommP = 30;
  string SnapshotRoot  = 40;
  string SnapshotURI   = 50;
  BackupState BackupState = 60;
}

message Conds {
  web3eye.StringVal ID = 10;
  web3eye.Uint64Val Index = 20;
  web3eye.StringVal SnapshotCommP = 30;
  web3eye.StringVal SnapshotRoot = 40;
  web3eye.StringVal SnapshotURI = 50;
  web3eye.StringVal BackupState = 60;
  web3eye.StringSliceVal IDs = 200;
}

message SnapshotRequest {
    uint64 Index         = 10;
    string SnapshotCommP = 20;
    string SnapshotRoot  = 30;
    string SnapshotURI   = 40;
    BackupState BackupState = 50;
  }

message CreateSnapshotRequest { SnapshotRequest Info = 10; }

message CreateSnapshotResponse { Snapshot Info = 10; }

message CreateSnapshotsRequest { repeated SnapshotRequest Infos = 10; }

message CreateSnapshotsResponse { repeated Snapshot Infos = 10; }

message GetSnapshotRequest { string ID = 10; }

message GetSnapshotResponse { Snapshot Info = 10; }

message GetSnapshotsRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetSnapshotsResponse {
  repeated Snapshot Infos = 10;
  uint32 Total = 20;
}

message GetSnapshotOnlyRequest { Conds Conds = 10; }

message GetSnapshotOnlyResponse { Snapshot Info = 10; }

message UpdateSnapshotRequest { 
    string ID            = 10;
    optional uint64 Index         = 20;
    optional string SnapshotCommP = 30;
    optional string SnapshotRoot  = 40;
    optional string SnapshotURI   = 50;
    optional BackupState BackupState = 60;
 }

message UpdateSnapshotResponse { Snapshot Info = 10; }

message ExistSnapshotRequest { string ID = 10; }

message ExistSnapshotResponse { bool Info = 10; }

message ExistSnapshotCondsRequest { Conds Conds = 10; }

message ExistSnapshotCondsResponse { bool Info = 10; }

message CountSnapshotsRequest { Conds Conds = 10; }

message CountSnapshotsResponse { uint32 Info = 10; }

message DeleteSnapshotRequest { string ID = 10; }

message DeleteSnapshotResponse { Snapshot Info = 10; }